<resources>
    <string name="app_name">My ApplicationIT226AndroidApp</string>
    <string name="action_settings">Settings</string>
    <string name="alarm_clock">Alarm Clock</string>
    <string name="timer">Timer</string>
    <string name="alarm">Alarm</string>
    <string name="what_would_you_like_to_set">What would you like to set?</string>
    <string name="welcome_to_your_android_alarm">Welcome to your android alarm!</string>
    <string name="title_activity_date">dateActivity</string>
    <string name="title_activity_clock">clockActivity</string>
    <string name="title_activity_timer">timerActivity</string>
    <string name="location_alarm">Location Alarm</string>
    <string name="next">Next</string>
    <string name="title_activity_message">messageActivity</string>
    <string name="please_enter_your_message">Please enter your message:</string>
    <string name="next2">Next</string>
    <string name="select_the_timer_length">Select the timer length:</string>
    <string name="hours">Hours:</string>
    <string name="minutes">Minutes:</string>
    <string name="next3">Next</string>
    <string name="done">Done</string>
    <string name="title_activity_location">locationActivity</string>
    <string name="within_how_many_minutes_of_no_location_change_would_you_like_the_alarm_to_go_off">Within how many minutes of no location change would you like the alarm to go off?</string>
    <string name="next4">Next</string>
    <string name="title_activity_recursive">recursiveActivity</string>
    <string name="do_you_want_the_alarm_to_be_recursive">Do you want the alarm to be recursive?</string>
    <string name="title_activity_time_zone">timeZoneActivity</string>
    <string name="title_activity_gps">gpsActivity</string>
    <string name="nextgps">Next</string>
    <string name="title_activity_transparent">Transparent</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="title_activity_displayer">Displayer</string>
</resources>
